# fastapi-library-project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  library.db  postgresql-compose.yml  pyproject.toml
app/: pyproject.toml  run.sh
app/app/: database.py  main.py
app/app/core/: config.py
backend/: database.py  pyproject.toml
backend/app/: crud.py  main.py  models.py  schemas.py
fastapi_project/: crud.py  main.py  models.py  schemas.py
