[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Aliff Amir <aliff6406@gmail.com@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"